k8s/apps/vod-arr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: bazarr
    app.kubernetes.io/version: 1.6.0
  name: bazarr
spec:
  ports:
    - name: http
      port: 6767
      protocol: TCP
      targetPort: http
  selector:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: bazarr
      app.kubernetes.io/part-of: bazarr
  type: ClusterIP
